# Stock-MA-Tracker

./: .env.example  .gitignore  CHANGELOG.md  README.md  Stock_MA_Tracker_Design_Doc.docx  pyproject.toml
.github/workflows/: daily-tracker.yml
config/: strategy.yaml
data/: QQQ.csv
docs/: Notification-Testing-Guide.md  Python-Environment-Setup-Stock-MA-Tracker.md
src/stock_ma_tracker/: __init__.py  __main__.py  cli.py  config.py
src/stock_ma_tracker/analysis/: __init__.py  moving_average.py
src/stock_ma_tracker/application/: __init__.py  factory.py  stored_history.py  strategy_runner.py  tracker_analyzer.py
src/stock_ma_tracker/config/: __init__.py  loader.py  models.py  validator.py
src/stock_ma_tracker/market_data/: __init__.py  csv_repository.py  models.py  provider.py  repository.py  sync.py  yahoo.py
src/stock_ma_tracker/notification/: __init__.py  formatter.py  notifier.py  telegram.py
state/: QQQ.json
tests/: conftest.py
tests/unit/: test_application_factory.py  test_buffered_strategy.py  test_cli.py  test_cli_run.py  test_cli_track.py  test_config.py  test_config_models.py  test_csv_market_data_repository.py  test_json_strategy_state_repository.py  test_market_data_models.py  test_market_data_sync.py  test_moving_average.py  test_moving_average_analysis.py  test_notification_factory.py  test_notification_formatter.py  test_package.py  test_signals.py  test_stored_history.py  test_strategy_runner.py  test_strategy_runner_factory.py  test_telegram_notifier.py  test_tracker_analyzer.py  test_tracker_service.py
(+10 files in other folders)
